--- a/style.css
+++ b/style.css
@@ -3,13 +3,87 @@
     margin :0;
     padding: 0;
 }
+body{
+    width: 650px;
+    margin: auto;
+   font-family: Arial, Helvetica, sans-serif;
+    background-color: #FFF5E2;
+}
 .container{
     width: 80%;
     margin:auto;
 }
 #site_header{
-    background-color: rgb(243, 176, 52);
+    background-color: #FDBB40;
+    position: relative;
+    padding: 23px;
+}
+#site_main{
+    background-color: white;
+    padding: 48px;
+    line-height: 52px;
 }
 #site_footer{
-    background-color: rgb(221, 99, 99);
+    background-color: #D33359;
+    padding: 20px;
 }
+
+/* utilities */
+
+.d_flex{
+    display: flex;
+}
+.flex-column{
+    flex-direction: column;
+}
+.justify_end{
+    justify-content: flex-end;
+}
+.justify_between{
+    justify-content: space-between;
+}
+
+/* header */
+.burguer_img{
+    height: 130px;
+    position: absolute;
+    right: -29px;
+    top: -15px;
+}
+
+/* main */
+img{
+    height:30px;
+}
+h2{
+    color: gray;
+    font-weight: 100;
+    font-size: 20px;
+}
+
+section, .discount, .discount > input{
+    font-size: 11px;
+}
+.discount > input{
+    background-color:#FFF5E2; ;
+    border: transparent;
+    padding: 5px;
+    width: 342;
+}
+.press_btn{
+    text-align: center;
+}
+#calc_btn{
+    padding: 10px 20px;
+    font-weight: 600;
+    border-radius: 5px;
+    border-color: transparent;
+    background-color:#FDBB40;
+}
+/* footer */
+.footer_box{
+    display: flex;
+    justify-content: space-between;
+    color: white;
+}
+    
