width to discount box added

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ section, .discount, .discount > input{
     background-color:#FFF5E2; ;
     border: transparent;
     padding: 5px;
-    width: 342;
+    width: 352px;
 }
 .press_btn{
     text-align: center;
